tests completed and working

--- a/templates/puppet.conf.j2
+++ b/templates/puppet.conf.j2
@@ -10,7 +10,7 @@ pluginsync      = true
 report          = true
 ignoreschedules = true
 daemon          = false
-ca_server       = {{ capsule }}
+ca_server       = {{ capsule_server }}
 certname        = {{ client_system }}
 environment     = {{ puppet_environment }}
-server          = {{ destination_capsule }}
+server          = {{ capsule_server }}
